cc: Fix raster with alpha for non-flags ops.

This was accidentally removed in
https://chromium-review.googlesource.com/c/582330/.

Bug: 749422
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I9f685b30f225810158133fa5b02ca8f24e0c63cb
Reviewed-on: https://chromium-review.googlesource.com/590677
Reviewed-by: enne <enne@chromium.org>
Commit-Queue: enne <enne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490473}
Former-commit-id: 16ec2957886c89f4c764f7062f1febd97ce153c3