cc/paint/paint_op_buffer_unittest.cc
@@ -469,6 +469,20 @@ TEST(PaintOpBufferTest, SaveDrawRestore_SingleOpRecordWithSingleNonDrawOp) {
   EXPECT_EQ(1, canvas.restore_count_);
 }
 
+TEST(PaintOpBufferTest, SaveLayerRestore_NoFlagsDraw) {
+  PaintOpBuffer buffer;
+  uint8_t alpha = 100;
+  buffer.push<SaveLayerAlphaOp>(nullptr, alpha, false);
+  buffer.push<DrawColorOp>(SK_ColorRED, SkBlendMode::kSrc);
+  buffer.push<RestoreOp>();
+
+  testing::StrictMock<MockCanvas> canvas;
+  EXPECT_CALL(canvas, OnSaveLayer());
+  EXPECT_CALL(canvas, OnDrawPaintWithColor(SK_ColorRED));
+  EXPECT_CALL(canvas, willRestore());
+  buffer.Playback(&canvas);
+}
+
 TEST(PaintOpBufferTest, DiscardableImagesTracking_EmptyBuffer) {
   PaintOpBuffer buffer;
   EXPECT_FALSE(buffer.HasDiscardableImages());
